package com.sunquan.zmqproto;

import public "typedef.proto";

option java_package = "com.sunquan.zmqproto";
option java_outer_classname = "MsgCarrierClass";

message MsgCarrier
{
	  enum MsgType
	  {
		option allow_alias = true;
		MSG_UNKNOWN = -1;
		INSERTORDER = 0;
		INSERTORDERREP = 1;
		CANCELORDER = 2;
		CANCELORDERREP = 3;
		QUERYORDER = 4;
		QUERYORDERREP = 5;
		QUERYPOSITION = 6;
		QUERYPOSITIONREP = 7;
		QUERYACCOUNT = 8;
		QUERYACCOUNTREP = 9;
		QUERYTRADE = 10;
		QUERYTRADEREP = 11;
		ERRORTYPE = 12;
		INSERTJOB = 13; //new trading job form the trader side.
		INSERTJOBREP = 14; 
		JOBRISKCHECK = 15;
		JOBRISKCHECKREP = 16;
		PAUSEJOB = 17;
		PAUSEJOBREP = 18;
		RESTARTJOB = 19;
		RESTARTJOBREP = 20;
		STOPJOB = 21;
		STOPJOBREP = 22;
		RISKCHECK = 23;
		RISKCHECKREP = 24;
		SECURITYCODETABLE = 25;
		SNAPSHOT = 26;
		TRANSACTION = 27;
		QUERYCODETABLE = 28;
		QUERYSNAPSHOTALL = 29;
		JOBCOMMAND = 30; //job pause, replay or end
		LOGIN = 31;
		LOGINREP = 32;
		USERAUTH = 33;
		USERAUTHREP = 34;
		BASICDATA = 35;
		PUB_JOBUPDATE = 36;
		PUB_ORDERUPDATE = 37;
		ALGO_QUERYJOBALL = 38;
		ALGO_QUERYJOBS = 39;
		ALGO_QUERYJOB4ACCOUNT = 40; //all jobs for certain account
		ALGO_QUERYJOBALLREP = 41;
		ALGO_QUERYORDERALL = 42;
		ALGO_QUERYORDERS = 43;
		ALGO_QUERYORDER4ACCOUNT = 44; //all orders for certain account
		ALGO_QUERYORDER4JOB = 45; //all orders for certain job
		ALGO_QUERYORDERALLREP = 46;
		BASICDATA_STOCKALPHABETA = 47;
		BASICDATA_INDEXSTATUS = 48;
		BASICDATA_SECURITYCODETABLE = 49;
		BASICDATA_SECTORCODETABLE = 50;
		BASICDATA_FUTUREFORECAST = 51;
		BASICDATA_INDEXFORECAST = 52;
		BASICDATA_STOCKBASEINFO = 53;
		BASICDATA_INDEXCONSTITUENTS = 54;
		BASICDATA_INDUSCONSTITUENTS = 55;
		BASICDATA_FUNDINDEXMAP = 56;
		BASICDATA_INDEXPRICEFORECAST = 57;
		BASICDATA_STOCKPRICEFORECAST = 58;
		BASICDATA_STOCKRISKVALUE = 59;
		BASICDATA_SECTORWEIGHT = 60;
		BASICDATA_FUNDALPHABETA = 61;
		ALGO_QUERYJOB4ACCOUNTREP = 62;
		ALGO_QUERYORDERSREP = 63;
		ALGO_QUERYORDER4ACCOUNTREP = 64;
		ALGO_QUERYORDER4JOBREP = 65;
                USERHEARTBT = 66;
		PUBACCOUNTINFO = 70;
		PUBPOSITIONS = 73;
		QUERYPOSITIONSUMMARY = 74;
		QUERYPOSITIONSUMMARYREP = 75;
		PUBPOSITIONSUMMARY = 76;		
		PUBTRADES = 79;
		PUBORDERS = 82;
		QUERYTDPROFIT = 83;
		QUERYTDPROFITREP = 84;
		PUBTDPROFIT = 85;	
		ALGO_QUERYJOBSREP = 86;	
		JOBCOMMANDREP = 87;
		CONFIG_QUERYPRODLIST = 88;
		CONFIG_QUERYPRODLISTREP = 89;
		CONFIG_QUERYACCOUNT4PROD = 90;
		CONFIG_QUERYACCOUNT4PRODREP = 91;
                BASICDATA_MARKETSTYLE = 92;
		SNAPSHOTS = 93;
		TRANSACTIONS = 94;
		RISK_TESTMSG = 95;
		RISK_OVERNIGHT = 96;
		QUERYSNAPSHOTS = 97;
		QUERYSNAPSHOTREP = 98;
		HEDGE_STATEUPDATE = 99;
		DERIVEDDATA_LFSIGNAL_REQ = 100;
		DERIVEDDATA_LFSIGNAL_REP = 101;
		HEDGE_SETPARAM = 131;
		HEDGE_SETPARAMREP = 132;
		HEDGE_SETPARAMEXTENDREP = 133;
		HEDGE_GETPARAM =134;
		HEDGE_GETPARAMREP=135;
		HEDGE_GETREFSIGNAL=136;
		HEDGE_GETREFSIGNALREP=137;
		HEDGE_CONTRACTCODE = 138;
		HEDGE_CONTRACTCODEREP=139;
		HEDGE_GETSFACCOUNT = 140;
		HEDGE_GETSFACCOUNTREP=141;
		QUERY_SNAPLITESALL = 142;
		QUERY_SNAPLITES = 143;
		QUERY_SNAPLITESREP = 144;
		PUB_SNAPLITEUPDATE = 145;		
		RISK_SETTING = 146;
		RISK_SETTINGREP = 147;
		RISK_RISKSETTINGUPDATE = 148;
		RISK_RISKSETTINGUPDATEREP = 149;
		RISK_GETPOSITIONBETA = 150;
		RISK_GETPOSITIONBETAREP = 151;
		RISK_GETRISKREASON = 152;
		RISK_GETRISKREASONREP = 153;
		RISK_GETRISKSETTING = 154;
		RISK_GETRISKSETTINGREP = 155;
		RISK_GETALLRISKSETTING = 156;
		RISK_GETALLRISKSETTINGREP = 157;
		PUB_JOBSUMMARY = 158;		
		DERIVEDDATA_ENTRUSTDEPTH_REP = 159;
		DERIVEDDATA_ENTRUSTDEPTH_REQ = 160;
		QUERY_THRESHOLD = 161;
		QUERY_THRESHOLDREP = 162;
		QUOTE_HEARTBEAT = 163;
		
		HFTRADING_LOGIN = 164;
		HFTRADING_LOGINREP = 165;
		HFTRADING_ACCOUNTLOGIN = 166;
		HFTRADING_ADDUPDATESTRATEGY = 167;
		HFTRADING_ADDUPDATESTRATEGYREP = 168;
		HFTRADING_STRATEGYSREQ = 171;
		HFTRADING_STRATEGYSREP = 172;
		HFTRADING_DELETESTRATEGY = 173;
		HFTRADING_DELETESTRATEGYREP = 174;
		HFTRADING_STARTSTRATEGY = 175;
		HFTRADING_ACTIONSTRATEGYREP = 176;
		HFTRADING_SUSPENDSTRATEGY = 177;
		HFTRADING_STOPSTRATEGY = 178;
		HFTRADING_CONTRACTSREQ = 179;
		HFTRADING_CONTRACTSREP = 180;
		HFTRADING_STRATEGYVIEWPUB = 181;
		BASICDATA_FUNDBASEINFO = 182;
		BASICDATA_CLIENTSECTORWEIGHT = 183;
		BASICDATA_BASICUPDATETIME = 184;
		CONFIG_QUERYFEES4ACCOUNT = 185;
		CONFIG_QUERYFEES4ACCOUNTREP = 186;
		DERIVEDDATA_MFANDPERCENT_REQ = 187;
		DERIVEDDATA_MFANDPERCENT_REP = 188;
		DERIVEDDATA_RANGEPROJECTION_REQ = 189;
		DERIVEDDATA_RANGEPROJECTION_REP = 190;
		HFTRADING_STRATEGYVIEWSREQ = 191;
		HFTRADING_STRATEGYVIEWSREP = 192;
		HFTRADING_HFQUERYTRADEREQ = 193;
		HFTRADING_HFQUERYTRADEREP = 194;
		HFTRADING_SPREADDATAPUB = 195;
		HFTRADING_PROFITDATAPUB = 196;
		HFTRADING_QUERYPROFITDATAREQ = 197;
		HFTRADING_QUERYPROFITDATAREP = 198;
		HFTRADING_QUERYINSTRUMENTREQ = 199;
		HFTRADING_QUERYINSTRUMENTRSP  = 200;
		REDIS_COMMANDREQ = 201;
		REDIS_COMMANDREP = 202;
		RISK_SAVE_COMPANYRISKSETTING_REQ = 203;
		RISK_SAVE_COMPANYRISKSETTING_REP = 204;
		RISK_GET_COMPANYRISKSETTING_REQ = 205;
		RISK_GET_COMPANYRISKSETTING_REP = 206;
		ModifyPwd = 207;
		ModifyPwdRep = 208;
		PUBALLPOSITION = 209;
		QueryQuote = 210;
		QueryQuoteRep = 211;
		SYSTEMLOGIN = 212;
		SYSTEMLOGINREP = 213;
		SMM_QUERY_REQ = 214;
		SMM_QUERY_REP = 215;
		SMM_MODIFY_REQ = 216;
		SMM_MODIFY_REP = 217;
		SMM_PUB   = 218;
		SMM_KEYPRICES_REQ = 219;
		SMM_KEYPRICES_REP = 220;
		INDEX = 221;
		DDL1 = 222;	//deriveddata level1
                GATEWAY_SUB   = 223;	//gateWay 消息订阅
                GATEWAY_UNSUB = 224;	//gateWay 取消消息订阅
                BASICDATA_MARKETSTYLEREQ = 225;
		DDLSector = 226; //deriveddata sector data
                PORTFOLIO_EDIT_REQ = 227;
                PORTFOLIO_EDIT_RSP = 228;
                PORTFOLIOITEM_EDIT_REQ = 229;
                PORTFOLIOITEM_EDIT_RSP = 230;
		ACCOUNT_AVAILABLE_REQ = 231;
		ACCOUNT_AVAILABLE_RSP = 232;
		ACCOUNT_AVAILABLE_PUB = 233;
		USERAUTH_USEROPERATE = 234;
		USERAUTH_PRODUCTOPERATE = 235;
                RISK_RISKREPORTREQ = 236;
                RISK_RISKREPORTREP = 237;
		DDRT = 238;	//deriveddata rt
		QUERY_SNAPLITESALL_COMPRESS_REQ = 239;
		QUERY_SNAPLITESALL_COMPRESS_RSP = 240;
		ANALYSIS_TCA_REQ = 241;
		ANALYSIS_TCA_RSP = 242;
                FSLEND_QUERYSECURITYITEM_REQ = 243;
                FSLEND_QUERYSECURITYITEM_RSP = 244;
                FSLEND_QUERYCONTRACT_REQ = 245;
                FSLEND_QUERYCONTRACT_RSP = 246;
				QUERYPOSITION_COMPRESS_REQ = 247;
				QUERYPOSITION_COMPRESS_RSP = 248;
				QUERYALLACCOUNT_REQ = 249;
				QUERYALLACCOUNT_RSP = 250;
                                PUB_FSLEND_CONTRACT = 251;
				LATENCYINDICATORS = 252;
				CurrencyEtf_StrategyAddReq = 253;
				CurrencyEtf_StrategyAddResp = 254;
				CurrencyEtf_StrategyAddPub = 255;
				CurrencyEtf_StrategyModifyReq = 257;  // 256 原来是TYPE_MAX使用，暂时保留
				CurrencyEtf_StrategyModifyResp = 258;
				CurrencyEtf_StrategyModifyPub = 259;
				CurrencyEtf_StrategyOperateReq = 260;
				CurrencyEtf_StrategyOperateResp = 261;
				CurrencyEtf_QueryStrategyListReq = 262;
				CurrencyEtf_QueryStrategyListResp = 263;
				CurrencyEtf_QueryOpenPositionListReq = 264;
				CurrencyEtf_QueryOpenPositionListResp = 265;
				CurrencyEtf_StrategyStatusChangedPub = 266;
				CurrencyEtf_StrategyPositionChangedPub = 267;
				QUERYACCTINFO_REQ = 268;
				QUERYACCTINFO_RSP = 269;
				OPT_QUERYCOMSTRADETAILITEM_REQ = 270;
				OPT_QUERYCOMSTRADETAILITEM_RSP = 271;
				INSERTCOMBSTRAORDER_REQ = 272;
				INSERTCOMBSTRAORDER_RSP = 273;
				OPT_BS_NORMS_PUB = 274;	
				OPT_BS_DELTA_PORTFOLIO_PUB = 275;
				OPT_BS_DELTA_HEDGE_PUB = 276;
				OPT_UNDL_MARKET_PUB = 277;				
				ACCOUNT_NETVALUE_REQ = 278;
				ACCOUNT_NETVALUE_RSP = 279;	
				// strategy related
				STRATEGY_QUERYSTRATEGYLIST_REQ = 280;
				STRATEGY_QUERYSTRATEGYLIST_REP = 281;
                                STRATEGY_PUB_STRATEGY   = 284;
                                STRATEGY_PUB_POSITION   = 285;	// discard temporary
				STRATEGY_ADDSTRATEGY_REQ = 288;
				STRATEGY_ADDSTRATEGY_REP = 289;
				STRATEGY_DELSTRATEGY_REQ = 290;
				STRATEGY_DELSTRATEGY_REP = 291;
				STRATEGY_MODIFYSTRATEGY_REQ = 292;
				STRATEGY_MODIFYSTRATEGY_REP = 293;
				STRATEGY_CONTROLSTRATEGY_REQ = 294;
				STRATEGY_CONTROLSTRATEGY_REP = 295;
				STRATEGY_PUB_TRADE   	= 296;
				STRATEGY_RESERVED = 305;		// strategy reserved from 296 to 305, add from 306
				SET_OPT_STARTEGY_STATE_REQ = 306;
				SET_OPT_STARTEGY_STATE_RSP = 307;
				OPT_STARTEGY_STATE_PUB = 308;
				LFSIGNAL_ALPHABETA_PUB = 310;
				OPT_BS_JOB_STATE_PUB = 311;
				OPT_STRATEGYS_REQ = 312;		//期权策略参数请求
				OPT_COMBO_STRATEGYS_RSP = 313;	//期权策略参数请求--应答
				OPT_HEDGE_STRATEGYS_RSP = 314;	//期权策略参数请求--应答
				OPT_STRATEGY_DEL_REQ = 315;
				OPT_STRATEGY_DEL_RSP = 316;
				OPT_COMBO_STRATEGYS_SET_RSP = 317;
				OPT_HEDGE_STRATEGYS_SET_RSP = 318;
				OPT_COMBO_STRATEGYS_SET_REQ = 319;
				OPT_HEDGE_STRATEGYS_SET_REQ = 320;
				ORDER = 321;
				ORDERQUEUE = 322;
				CLIENT_QUERY_ORDER_BALANCE_PARAM_REQ = 323;
				CLIENT_QUERY_ORDER_BALANCE_PARAM_RSP = 324;
				TRANSFERINANDOUT_REQ = 325;// 资金调入调出
				TRANSFERINANDOUT_RSP = 326;
                                QUERY_T0STOCK_REQ = 327;  // req t0 stock
                                QUERY_T0STOCK_RSP = 328;  // rsq
                                SAVE_T0STOCK_REQ = 329;   //保存分券信息
                                SAVE_T0STOCK_RSP = 330;   //保存分券信息响应
                                PUB_T0STOCK_CHANGE = 331; //发布单条持仓变更

                ACCOUNT_IMPORINFO = 332;//前台界面导入估值数据时，在服务端留痕，且写入postgresql
                ACCOUNT_IMPORINFORSP = 333;//估值数据导入响应
            }

            optional int64 seqno = 1;
            optional MsgType type = 2;
            optional bytes message = 3;

            //this field can be used for different purposes depending on the business logics, when sending messages to Proxy,
            //it is of type TypeDef.SecurityProviderEnum to indicate the security provider
            optional int32 indicator = 4;
            optional string jwt = 5;          // Json Web Token
            optional bool authenticated = 6; // jwt authenticate status

            optional string service = 7; //服务端属性字段，可能是服务名称或者端口号
            optional string pubtopic = 8; //用来保存 pub 消息时的主题字段
            optional int64 msgid = 9;
			optional bool iscompress = 10;
}

message MsgCarriers
{
	repeated bytes items = 1;
}

message Error
{
	optional bytes msg = 1;
	optional int64 reqid = 2;
	optional TypeDef.ErrorType errortype = 3 [default = ERROR_UNKNOWN];
}


